tests/kiama/negative/name_errors/L1/5_selfref2.ob
MODULE selfref;

CONST
    aconst1 = 1;
    aconst2 = aconst1 + aconst2;

END selfref.
